[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rlm-research-mcp"
version = "0.1.0"
description = "RLM Deep Research MCP server — recursive language model inference over documents, code, and web"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "typer>=0.9",
    "openai>=1.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
pdf = ["pymupdf>=1.24"]
docx = ["python-docx>=1.1"]
web = ["trafilatura>=1.8"]
all = ["rlm-research-mcp[pdf,docx,web]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
rlm-research = "rlm_research.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/rlm_research"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
